[project]
name = "discutext-api"
version = "0.1.0"
description = "API for NWS Forecast Discussions"
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
    "boto3>=1.24.12,<2",
    "flask>=2.1.2,<3",
    "flask-cors>=3.0.10,<4",
    "pydantic>=1.10.0,<2",
    "python-dateutil>=2.9.0,<3",
    "requests>=2.28.0,<3",
    "zappa==0.59.0"
]

[dependency-groups]
dev = [
    "awscli",
    "black",
    "flake8",
    "ipython",
    "ipdb",
    "isort",
    "mypy",
    "setuptools==69.5.1",   # https://github.com/zappa/Zappa/issues/1349
    "boto3-stubs[s3]",
    "types-python-dateutil",
    "types-requests"
]
