[project]
name = "discutext-api"
version = "1.0.0"
description = "API for NWS Forecast Discussions"
readme = "README.md"
requires-python = ">=3.14, <3.15"
dependencies = [
    "boto3>=1.24.12,<2",
    "flask>=3,<4",
    "flask-cors>=5,<6",
    "pydantic>=2,<3",
    "python-dateutil>=2.9.0,<3",
    "requests>=2.28.0,<3",
    "zappa>=0.61.4,<0.62",
]

[dependency-groups]
deploy = [
    "gunicorn>=23.0.0",
]
dev = [
    "awscli",
    "ipython",
    "ipdb",
    "boto3-stubs[s3]",
    "types-python-dateutil",
    "types-requests",
    "basedpyright>=1.37.4",
    "ruff>=0.15.0",
]

[tool.pyright]
typeCheckingMode = "recommended"

[tool.ruff]
line-length = 100
